--- a/src/components/forms/InputWrapper/InputWrapper.module.scss
+++ b/src/components/forms/InputWrapper/InputWrapper.module.scss
@@ -1,5 +1,10 @@
 @use '/src/common/styles/templates' as *;
 
+
+.wrapper{
+  position: relative;
+  margin-bottom: 25px;
+}
 .input{
  @extend %size-for-item-form;
 }
@@ -9,4 +14,16 @@
 .input::placeholder{
  padding-left: 10px;
  font-size: 0.7rem;
+}
+.error{
+  position: absolute;
+  background-color: #fce4e4;
+  border: 0.5px solid #fcc2c3;
+  float: left;
+  padding: 5px;
+  color: #cc0033;
+  font-size: 0.5rem;
+  font-weight: bold;
+  line-height: 8px;
+  text-align: left;
 }
